--- a/src/App.css
+++ b/src/App.css
@@ -13,15 +13,18 @@
   }
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Krona+One&display=swap');
+
 .App-header {
-  background-color: #282c34;
+  background-color: #1c1c1c;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  padding-top: 3%;
   font-size: calc(10px + 2vmin);
   color: white;
+  font-family: "Krona One", "Roboto","Helvetica","Arial",sans-serif;
 }
 
 .App-link {
