--- a/src/components/VideoSurface.css
+++ b/src/components/VideoSurface.css
@@ -19,6 +19,11 @@ iframe {
     margin-left: -100%;
 }
 
+.progressArea {
+    float: right;
+    margin-top: 12px;
+}
+
 #videoSkeleton {
     position: inherit;
     width: -webkit-fill-available;
@@ -26,15 +31,38 @@ iframe {
     animation: skeletonAnimation 1.5s ease-in-out 0.5s infinite;
 }
 
+.gameControls {
+	margin-top: 3%;
+	width: 50%;
+    text-align: start;
+}
+
 @keyframes skeletonAnimation {
 	0% {
-		background: #23272e;
+		background: #1c1c1c;
 	}
 	50% {
-		background: #282c34;
+		background: #505050;
 	}
 	100% {
-		background: #23272e;
+		background: #1c1c1c;
 	}
 }
+
+.progressDot {
+	height: 25px;
+	width: 25px;
+	background-color: white;
+	border-radius: 50%;
+	display: inline-block;
+	margin-left: 5px;
+  }
+  
+  .DotWon {
+	background-color: #28d811;
+  }
+  
+  .DotLost {
+	background-color: #da1313;
+  }
 
