--- a/src/index.css
+++ b/src/index.css
@@ -12,18 +12,6 @@ code {
     monospace;
 }
 
-.progressDot {
-  height: 25px;
-  width: 25px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-}
-
-.DotWon {
-  background-color: #28d811;
-}
-
-.DotLost {
-  background-color: #da1313;
+.GameModeButton {
+  margin: 0 5px !important;
 }
